# WorkIt.Gym-Recommender-Website

./: .gitignore  README.md  deployment_note.md  index.php  user_data_script.txt
AI/: README.md  pyproject.toml  requirements.txt
AI/model/: ann_gym_recommender.keras
AI/notebook/: Predict.ipynb  Ratings Assignments.ipynb  Train.ipynb
AI/notebooks/: Train.ipynb
AI/notebooks/.ipynb_checkpoints/: Predict-checkpoint.ipynb
AI/script/: Predict.py
AI/source/: Predict.py
css/: login.css  main.css
includes/: config.php  footer.php  header.php  recommender.php  test_flask.php  utils.php  video.php
js/: main.js
sign_up/: login.php  register.php
