[tool.poetry]
name = "workit-gym-recommender"
version = "0.1.0"
description = "AI-powered gym workout recommender system"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.26.4"
tensorflow = "2.10.1"
tensorflow-io-gcs-filesystem = "0.31.0"
pandas = "*"
scikit-learn = "*"
pymysql = "*"
sshtunnel = "*"
flask = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"